0.8.0
- TDMA-V2 implementation
  * multiple slots
  * packet delay compensation
  * slave hot plugging
  * backup master
- new NIC device driver layer
  * atomic transmission time stamp
  * improved locking scheme
  * layer version tag
- kernel 2.6 support
- experimental RTAI/fusion 0.6.6 support
- source tree reorganisation
- added NoMAC module as skeleton for new disciplines
- revised and extended rtnet start script
- worst-case statistics for rtping
- read stage 1 data for "rtcfg add" from stdin
- bug fixes in RTcfg, /proc output, legacy tdma-v1, and some other parts

0.7.1
- extended RTcfg
  * heartbeat support for clients
  * client failure detection and notification
  * server restart after failures
  * IP assignment to clients based on HW addresses
  * verbose /proc interface
- clean up loopback route when non-loopback interface goes down or changes ip

0.7.0
- ported user API to RTDM (real-time driver model)
- revised TDMA API based on RTDM
- revised routing system
  * hash-table-based lookups
  * removed redundant ARP table
  * added network routing and forwarding support
  * loopback routes for non-loopback device IPs
  * lock protection
- added rtroute
- revised rtifconfig
- added rtping core support and user tool
- reordered and extended /proc interface
- improved non-real-time locking (devices and various lists)
- lock protection of variable socket parameters
- added netshm example
- reorganised and cleaned up examples directory
- fixed UDP port demultiplexing bug
- fixed return value of non-blocking receive on empty queue
- fixed queue clean-up bug in packet sockets
- fixed bug in RTcfg frames on big endian platforms (PPC)

0.6.2
- removed runtime garbage collection of fragmented IP packets
- added "cards" parameter to tulip-rt
- revised automatic UDP port number assigment
- added ip address evaluation to UDP port lookup
- added SMC91111 driver
- fixed routing bug in IP input path
- fixed bug in timeout handling of recvmsg functions