@@ -361,6 +361,9 @@ if test x"$CONFIG_RTNET_RTAI_3" \!= x"n"; then
     0.6.6-fusion)
 	CONFIG_RTNET_RTAI_VERSION=066
 	;;
+    0.6.7-fusion)
+	CONFIG_RTNET_RTAI_VERSION=067
+	;;
     *)
 	AC_MSG_ERROR([*** Unsupported RTAI version $CONFIG_RTNET_RTAI_3_VERSION in $RTAI_DIR])
 	;;
@@ -406,7 +409,7 @@ if test x"$CONFIG_RTNET_RTAI_3" \!= x"n"; then
 
 	    ;;
 
-	066)	# ---> FUSION <---
+	066 | 067)	# ---> FUSION <---
 
 	    # check for native RTAI skin, needed by rtnet
 	    AC_MSG_CHECKING([for RTAI native skin])
@@ -473,8 +476,8 @@ case "$CONFIG_RTNET_RTAI_VERSION" in
     32)
 	AC_DEFINE(CONFIG_RTAI_32, 1, [We build for rtai 3.2rx])
 	;;
-    066)
-	AC_DEFINE(CONFIG_FUSION_066, 1, [We build for fusion 0.6.6])
+    066 | 067)
+	AC_DEFINE(CONFIG_FUSION_06, 1, [We build for fusion 0.6.x])
 	;;
     *)
 	AC_MSG_ERROR([*** No RTAI found in $with_rtai])
@@ -530,7 +533,7 @@ case "${CONFIG_RTNET_RTAI_VERSION}" in
 	RTAI_USER_CFLAGS="`${RTAI_CONFIG} --lxrt-cflags`"
 	CONFIG_RTNET_RTAI_ARCH="`${RTAI_CONFIG} --arch`"
 	;;
-    066)
+    066 | 067)
 	RTAI_USER_CFLAGS="`${RTAI_CONFIG} --fusion-cflags`"
 	CONFIG_RTNET_RTAI_ARCH="`${RTAI_CONFIG} --arch`"
 	;;
@@ -548,7 +551,7 @@ if test "$CONFIG_KBUILD" = "y"; then
 	31 | 32)
 	    RTAI_KMOD_CFLAGS="`${RTAI_CONFIG} --lxrt-cflags`"
 	    ;;
-	066)
+	066 | 067)
 	    RTAI_KMOD_CFLAGS="`${RTAI_CONFIG} --fusion-cflags`"
 	    ;;
 	*)
@@ -563,7 +566,7 @@ else
 	30 | 31 | 32)
 	    RTAI_KMOD_CFLAGS="`${RTAI_CONFIG} --module-cflags`"
 	    ;;
-	066)
+	066 | 067)
 	    AC_MSG_ERROR([*** internal error])
 	    ;;
 	*)
@@ -724,7 +727,7 @@ if test "${CONFIG_KBUILD}" = "y"; then	# building against linux-2.6
 #include <linux/kernel.h>
 		])
             ;;
-	066)
+	066 | 067)
 	    BS_CHECK_KHEADERS([rtai/sem.h rtai/mutex.h rtai/pipe.h],
 		[],
 		[AC_MSG_ERROR([*** header not found or working, please check RTAI installation])],
@@ -737,7 +740,7 @@ if test "${CONFIG_KBUILD}" = "y"; then	# building against linux-2.6
 	    ;;
     esac
 else					# building against linux-2.4
-    case "${CONFIG_RTNET_RTAI_VERSION}" in	
+    case "${CONFIG_RTNET_RTAI_VERSION}" in
         24)		# mandatory RTAI-24 headers
 	    AC_CHECK_HEADERS([rtai_lxrt_user.h rtai_declare.h],
 	    [],
@@ -754,7 +757,7 @@ else					# building against linux-2.4
 #include <linux/kernel.h>
             ])
 	    ;;
-	066)
+	066 | 067)
 	    AC_MSG_ERROR([*** internal error])
 	    ;;
 	*)
@@ -801,7 +804,7 @@ case "${CONFIG_RTNET_RTAI_VERSION}" in
 	    *) CONFIG_NEWLXRT=no ;;
 	esac
 	;;
-    066) CONFIG_NEWLXRT=no
+    066 | 067) CONFIG_NEWLXRT=no
 	;;
     *)
 	AC_MSG_ERROR([*** internal error])
