@@ -38,8 +38,8 @@ typedef __s64   nanosecs_t;     /* used for time calculations and I/O */
 /* Support for RTAI 24.1.x and 3.x */
 #if defined(CONFIG_RTAI_24) || defined(CONFIG_RTAI_30) || defined(CONFIG_RTAI_31) || defined(CONFIG_RTAI_32)
 # include <rtnet_sys_rtai.h>
-#elif defined(CONFIG_FUSION_066)
-/* Support for fusion */
+#elif defined(CONFIG_FUSION_06)
+/* Support for fusion 0.6.6 or better */
 # include <rtnet_sys_fusion.h>
 #endif
 
