@@ -1,0 +1,39 @@
+#
+# Examplary TDMA configuration file
+#
+
+# Primary master
+
+master:
+ip 10.0.0.1
+cycle 5000
+slot 0 0
+slot 1 1000
+
+
+# Backup master
+#  Cycle is defined by the primary master
+
+backup-master:
+ip 10.0.0.2
+backup-offset 200
+slot 0 400
+
+
+# Slave A
+#  MAC is unknown, slave will be pre-configured to the given IP
+
+slave:
+ip 10.0.0.3
+slot 0 2000
+slot 1 2200 1/2
+
+
+# Slave B
+#  IP is assigned to the slave via its known MAC address
+
+slave:
+ip 10.0.0.4
+mac 00:12:34:56:AA:FF
+slot 0 2400
+slot 1 2200 2/2
